# SmartEsprit

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  smartesprit_w.glade.bak  smartesprit_w.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: 1.txt  122.txt  123.txt  4445.txt  55.txt  AF.h  Agent_de_foyer.c  Aziz.c  Aziz.h  Makefile  Makefile.am  Makefile.in  NomComplet.txt  SEW.c  SEW.h  ajouter.c  ajouter.h  atef.c  atef.h  callbacks.c  callbacks.h  capteur.c  capteur.h  chercher_fba.txt  dechets.txt  etudiant_fba.txt  interface.c  interface.c.bak  interface.h  main.c  menu.txt  modifier.c  modifier.h  reclamations.txt  smartesprit_w  stock.txt  supprimer.c  supprimer.h  utilisateur.txt  utilisateur_hedi.txt  (+9 more)
src/.deps/: Aziz.Po  SEW.Po  atef.Po  callbacks.Po  fonction.Po  modifier.Po  supprimer.Po  verfier_h.Po  verfier_j.Po  verfier_t.Po
